--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "baseui": "^9.97.0",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.3.3",
+    "next-absolute-url": "^1.2.2",
     "next-auth": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -25,6 +26,7 @@
     "styletron-react": "^5.2.7"
   },
   "devDependencies": {
-    "@prisma/cli": "2.5.1"
+    "@prisma/cli": "2.5.1",
+    "dotenv-webpack": "^2.0.0"
   }
 }
