--- a/prisma/prisma.yml
+++ b/prisma/prisma.yml
@@ -1,5 +1,5 @@
 endpoint: http://localhost:4466
-datamodel: datamodel.prisma
+datamodel: schema.prisma
 
 generate:
   - generator: javascript-client
