--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "dev": "next",
     "build": "next build",
     "start": "next start -p $PORT",
-    "preinstall": "npx prisma migrate up --experimental",
-    "postinstall": "npx prisma generate",
-    "prisma-stage": "DB_URL=$(cat .env.stage | grep DB_URL | cut -d '=' -f 2) npx prisma migrate up --experimental",
-    "prisma-prod": "DB_URL=$(cat .env.prod | grep DB_URL | cut -d '=' -f 2) npx prisma migrate up --experimental"
+    "preinstall": "npx prisma generate && npx prisma migrate up --experimental --name 'up' && npx prisma migrate up --experimental",
+    "postinstall": "",
+    "prismastage": "DB_URL=$(cat .env | grep DB_URL | cut -d '=' -f 2) npx prisma generate && npx prisma migrate up --experimental --name 'up' && npx prisma migrate up --experimental",
+    "prisma-prod": "DB_URL=$(cat .env.prod | grep DB_URL | cut -d '=' -f 2) npx prisma generate && npx prisma migrate up --experimental --name 'up' && npx prisma migrate up --experimental",
+    "db": "npx prisma studio --experimental"
   },
   "keywords": [],
   "author": "",
