Attempt on preinstall?

--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "dev": "next",
     "build": "next build",
     "start": "next start -p $PORT",
-    "prismastage": "DB_URL=$(cat .env | grep DB_URL | cut -d '=' -f 2) npx prisma generate && npx prisma migrate up --experimental --name 'up' && npx prisma migrate up --experimental",
-    "prisma-prod": "DB_URL=$(cat .env.prod | grep DB_URL | cut -d '=' -f 2) npx prisma generate && npx prisma migrate up --experimental --name 'up' && npx prisma migrate up --experimental",
+    "preinstall": "npx prisma generate",
+    "prismastage": "npx prisma generate && npx prisma migrate save  -n 'up' --experimental && npx prisma migrate up --experimental",
+    "prismaprod": "mv .env .env.stage && mv .env.prod .env && npx prisma generate && npx prisma migrate save -n 'up' --experimental && npx prisma migrate up --experimental && mv .env .env.prod && mv .env.stage .env",
     "db": "npx prisma studio --experimental"
   },
   "keywords": [],
