--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-instagram-login": "^1.4.0",
     "react-markdown": "^4.3.1",
     "styletron-engine-atomic": "^1.4.6",
-    "styletron-react": "^5.2.7"
+    "styletron-react": "^5.2.7",
+    "user-instagram": "^2.1.3"
   },
   "devDependencies": {
     "@prisma/cli": "2.5.1",
