--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@prisma/client": "2.5.1",
     "baseui": "^9.97.0",
+    "cloudinary-react": "^1.6.6",
     "instagram-basic-display": "github:stupidsystems/instagram-basic-display#master",
     "instagram-private-api": "^1.41.0",
     "instagram-web-api": "^2.2.2",
@@ -31,10 +32,12 @@
     "postmark": "^2.5.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-images-upload": "^1.2.8",
     "react-instagram-login": "^1.4.0",
     "react-markdown": "^4.3.1",
     "styletron-engine-atomic": "^1.4.6",
     "styletron-react": "^5.2.7",
+    "use-cloudinary": "^3.1.6",
     "user-instagram": "^2.1.3"
   },
   "devDependencies": {
