--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.3.3",
     "next-absolute-url": "^1.2.2",
-    "next-auth": "^3.1.0",
+    "next-auth": "github:stupidsystems/next-auth",
     "postmark": "^2.5.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
