Update to insta

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cloudinary-react": "^1.6.6",
     "fabric": "^4.1.0",
     "fast-csv": "^4.3.2",
+    "formidable": "^1.2.2",
     "instagram-basic-display": "github:stupidsystems/instagram-basic-display#master",
     "instagram-private-api": "^1.41.0",
     "instagram-web-api": "^2.2.2",
@@ -35,6 +36,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-images-upload": "^1.2.8",
+    "react-infinite-scroll-component": "^5.1.0",
     "react-instagram-login": "^1.4.0",
     "react-markdown": "^4.3.1",
     "styletron-engine-atomic": "^1.4.6",
