--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "next",
     "build": "next build",
     "start": "next start -p $PORT",
-    "heroku-postbuild ": "next build",
+    "heroku-postbuild ": "npx prisma generate && next build",
     "prismastage": "npx prisma generate && npx prisma migrate save  -n 'up' --experimental && npx prisma migrate up --experimental",
     "prismaprod": "npx prisma generate && npx prisma migrate save -n 'up' --experimental && npx prisma migrate up --experimental",
     "db": "npx prisma studio --experimental"
