--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@prisma/client": "2.5.1",
     "baseui": "^9.97.0",
     "cloudinary": "^1.23.0",
-    "cloudinary-react": "^1.6.6",
+    "cloudinary-core": "^2.11.3",
+    "cloudinary-react": "^1.6.7",
     "deepmerge": "^4.2.2",
     "fabric": "^4.1.0",
     "fast-csv": "^4.3.2",
@@ -34,6 +35,7 @@
     "next": "^9.3.3",
     "next-absolute-url": "^1.2.2",
     "next-auth": "github:stupidsystems/next-auth",
+    "next-seo": "^4.11.0",
     "postmark": "^2.5.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
