Actually got the image generator working

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "2.5.1",
+    "@sentry/react": "^5.26.0",
+    "@sentry/tracing": "^5.26.0",
     "baseui": "^9.97.0",
     "cloudinary": "^1.23.0",
     "cloudinary-core": "^2.11.3",
