Adding a bunch of fixes including clicker and basic ad-sense

--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "next-auth": "github:stupidsystems/next-auth",
     "next-seo": "^4.11.0",
     "postmark": "^2.5.5",
+    "psl": "^1.8.0",
     "react": "^16.13.1",
+    "react-adsense": "^0.1.0",
     "react-dom": "^16.13.1",
     "react-images-upload": "^1.2.8",
     "react-infinite-scroll-component": "^5.1.0",
