--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "^16.13.1",
     "react-adsense": "^0.1.0",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-images-upload": "^1.2.8",
     "react-infinite-scroll-component": "^5.1.0",
     "react-instagram-login": "^1.4.0",
