--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.5.5",
     "next-auth": "github:stupidsystems/next-auth",
+    "next-seo": "^4.14.0",
     "postmark": "^2.5.5",
     "psl": "^1.8.0",
     "react": "^16.13.1",
