--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "psl": "^1.8.0",
     "react": "^16.13.1",
     "react-adsense": "^0.1.0",
+    "react-alice-carousel": "^2.0.2",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-images-upload": "^1.2.8",
