--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "instagram-private-api": "^1.41.0",
     "instagram-web-api": "^2.2.2",
     "isomorphic-unfetch": "^3.0.0",
+    "marksy": "^8.0.0",
     "next": "^9.5.5",
     "next-auth": "github:stupidsystems/next-auth",
     "next-seo": "^4.14.0",
