--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@prisma/client": "^2.11.0",
     "@sentry/react": "^5.26.0",
     "@sentry/tracing": "^5.26.0",
     "baseui": "^9.102.0",
@@ -63,10 +62,7 @@
     "user-instagram": "^2.1.3"
   },
   "devDependencies": {
-    "@prisma/cli": "^2.11.0",
-    "@prisma/client": "^2.11.0",
-    "dotenv-webpack": "^2.0.0",
-    "i": "^0.3.6",
-    "npm": "^6.14.10"
+    "@prisma/cli": "2.11.0",
+    "dotenv-webpack": "^2.0.0"
   }
 }
